[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
cobs = "^1.2.1"
pyserial = "^3.5"
questdb = "^2.0.3"
pigpio = "^1.78"
requests = "^2.32.3"
numpy = "^2.2.1"
rpi-ws281x = {version = "^5.0.0", platform = "linux"}
adafruit-circuitpython-neopixel = {version = "^6.3.12", platform = "linux"}
adafruit-blinka = {version = "^8.50.0", platform = "linux"}
scipy = "^1.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
